<?xml version='1.0' encoding='UTF-8'?>
<!-- Copyright (C) 2015 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Name of the phone dialer application [CHAR LIMIT=30]-->
    <string name="phone_app_name">Phone</string>
    <!-- Full-screen error text for when the phone can not be used because Bluetooth isn't connected [CHAR LIMIT=NONE]-->
    <string name="no_hfp">To make or receive calls, connect your phone to your car via Bluetooth.</string>
    <!-- Error text shown on the dialer facet for when bluetooth is disabled -->
    <string name="bluetooth_disabled">To make or receive calls, turn Bluetooth on.</string>
    <!-- Error text shown on the dialer facet for when bluetooth is not paired -->
    <string name="bluetooth_unpaired">To make or receive calls, pair your phone with the car.</string>
    <!-- Toast text when a call failed because the network isn't available [CHAR LIMIT=40] -->
    <string name="error_network_not_available">Network not available.</string>
    <!-- Toast text when a call failed because the phone is in airplane mode [CHAR LIMIT=40] -->
    <string name="error_airplane_mode">Phone is in airplane mode.</string>
    <!-- Toast text when a call failed because bluetooth hfp is not available [CHAR LIMIT=40] -->
    <string name="error_no_hfp">Bluetooth is not connected.</string>
    <!-- Call status shown while a call is ongoing [CHAR LIMIT=40] -->
    <string name="phone_label_with_info">
        <xliff:g id="label" example="Mobile">%1$s</xliff:g>
        " \u00B7 "
        <xliff:g id="duration" example="1:20">%2$s</xliff:g>
    </string>
    <!-- Text displayed when the call log is empty. [CHAR LIMIT=40] -->
    <string name="recent_calls_empty">Your call log is empty.</string>
    <!-- Text displayed when the speed dial is empty. [CHAR LIMIT=100] -->
    <string name="speed_dial_empty">Speed Dial provides one-touch dialing for favorites and numbers you call often</string>

    <!-- Status label for phone state [CHAR LIMIT=20] -->
    <string name="call_state_connecting">Connecting</string>
    <!-- Status label for phone state [CHAR LIMIT=20] -->
    <string name="call_state_dialing">Dialing</string>
    <!-- Status label for phone state [CHAR LIMIT=20] -->
    <string name="call_state_hold">On Hold</string>
    <!-- Status label for phone state [CHAR LIMIT=20] -->
    <string name="call_state_call_ended">Call Ended</string>
    <!-- Status label for phone state [CHAR LIMIT=20] -->
    <string name="call_state_call_active">Connected</string>
    <!-- Status label for phone state [CHAR LIMIT=20] -->
    <string name="call_state_call_ringing">Ringing</string>
    <!-- Status label for phone state [CHAR LIMIT=20] -->
    <string name="call_state_call_ending">Disconnecting</string>

    <!-- Label for voicemail [CHAR LIMIT=30] -->
    <string name="voicemail">Voicemail</string>
    <!-- Label for current phone call [CHAR LIMIT=30] -->
    <!-- Label for incoming call [CHAR LIMIT=30] -->
    <!-- Label for a recent call card [CHAR LIMIT=30] -->
    <!-- Label for button to answer a phone call [CHAR LIMIT=30] -->
    <!-- Label for button to reject a phone call [CHAR LIMIT=30] -->
    <!-- Label for when a call is coming from an unknown caller [CHAR LIMIT=30] -->
    <string name="unknown">Unknown</string>
    <!-- Label for when a call is a conference call [CHAR LIMIT=30] -->
    <string name="conference_call">Conference call</string>

    <!-- Menu label for the call history [CHAR LIMIT=30] -->
    <string name="calllog_all">Call History</string>
    <!-- Menu label for the missed call history [CHAR LIMIT=30] -->
    <string name="calllog_missed">Missed</string>
    <!-- Menu label for dial a number [CHAR LIMIT=30] -->
    <string name="calllog_dial_number">Dial a number</string>
    <!-- Button label to dial a manually entered phone number -->
    <string name="dial_a_number">Dial a number</string>

    <!-- TODO: we do not need to localize this, figure out how to build ignoring it -->
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="star">*</string>
    <string name="pound">#</string>

    <string name="two_letters">ABC</string>
    <string name="three_letters">DEF</string>
    <string name="four_letters">GHI</string>
    <string name="five_letters">JKL</string>
    <string name="six_letters">MNO</string>
    <string name="seven_letters">PQRS</string>
    <string name="eight_letters">TUV</string>
    <string name="nine_letters">WXYZ</string>
    <string name="zero_letters">+</string>

    <!-- Using spaces here so that the positioning of the number is consistent. -->
    <string name="star_letters"> </string>
    <string name="pound_letters"> </string>

    <string name="search_title">Search contacts</string>
    <string name="search_hint">Search contacts</string>
    <string name="type_home">Home</string>
    <string name="type_work">Work</string>
    <string name="type_mobile">Mobile</string>
    <string name="type_other">Other</string>

</resources>
