<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialpad_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:columnCount="5">

    <!-- Row 1 -->
    <com.android.car.dialer.DialpadButton
        android:id="@+id/one"
        app:numberText="@string/one"
        app:image="@drawable/ic_voicemail"
        style="@style/DialpadKeyButtonStyle"/>
    <Space
        android:layout_width="@dimen/in_call_card_dialpad_horizontal_spacing"
        android:layout_height="0dp"/>
    <com.android.car.dialer.DialpadButton
        android:id="@+id/two"
        app:numberText="@string/two"
        app:letterText="@string/two_letters"
        style="@style/DialpadKeyButtonStyle"/>
    <Space
        android:layout_width="@dimen/in_call_card_dialpad_horizontal_spacing"
        android:layout_height="0dp"/>
    <com.android.car.dialer.DialpadButton
        android:id="@+id/three"
        app:numberText="@string/three"
        app:letterText="@string/three_letters"
        style="@style/DialpadKeyButtonStyle"/>

    <!-- Vertical spacing between rows. -->
    <Space
        android:layout_height="@dimen/in_call_card_dialpad_vertical_spacing"
        android:layout_width="0dp"
        android:layout_columnSpan="5" />

    <!-- Row 2 -->
    <com.android.car.dialer.DialpadButton
        android:id="@+id/four"
        app:numberText="@string/four"
        app:letterText="@string/four_letters"
        style="@style/DialpadKeyButtonStyle"/>
    <Space
        android:layout_width="@dimen/in_call_card_dialpad_horizontal_spacing"
        android:layout_height="0dp"/>
    <com.android.car.dialer.DialpadButton
        android:id="@+id/five"
        app:numberText="@string/five"
        app:letterText="@string/five_letters"
        style="@style/DialpadKeyButtonStyle"/>
    <Space
        android:layout_width="@dimen/in_call_card_dialpad_horizontal_spacing"
        android:layout_height="0dp"/>
    <com.android.car.dialer.DialpadButton
        android:id="@+id/six"
        app:numberText="@string/six"
        app:letterText="@string/six_letters"
        style="@style/DialpadKeyButtonStyle"/>

    <!-- Vertical spacing between rows. -->
    <Space
        android:layout_height="@dimen/in_call_card_dialpad_vertical_spacing"
        android:layout_width="0dp"
        android:layout_columnSpan="5" />

    <!-- Row 3 -->
    <com.android.car.dialer.DialpadButton
        android:id="@+id/seven"
        app:numberText="@string/seven"
        app:letterText="@string/seven_letters"
        style="@style/DialpadKeyButtonStyle"/>
    <Space
        android:layout_width="@dimen/in_call_card_dialpad_horizontal_spacing"
        android:layout_height="0dp"/>
    <com.android.car.dialer.DialpadButton
        android:id="@+id/eight"
        app:numberText="@string/eight"
        app:letterText="@string/eight_letters"
        style="@style/DialpadKeyButtonStyle"/>
    <Space
        android:layout_width="@dimen/in_call_card_dialpad_horizontal_spacing"
        android:layout_height="0dp"/>
    <com.android.car.dialer.DialpadButton
        android:id="@+id/nine"
        app:numberText="@string/nine"
        app:letterText="@string/nine_letters"
        style="@style/DialpadKeyButtonStyle"/>

    <!-- Vertical spacing between rows. -->
    <Space
        android:layout_height="@dimen/in_call_card_dialpad_vertical_spacing"
        android:layout_width="0dp"
        android:layout_columnSpan="5" />

    <!-- Row 4 -->
    <com.android.car.dialer.DialpadButton
        android:id="@+id/star"
        app:numberText="@string/star"
        app:letterText="@string/star_letters"
        style="@style/DialpadKeyButtonStyle"/>
    <Space
        android:layout_width="@dimen/in_call_card_dialpad_horizontal_spacing"
        android:layout_height="0dp"/>
    <com.android.car.dialer.DialpadButton
        android:id="@+id/zero"
        app:numberText="@string/zero"
        app:letterText="@string/zero_letters"
        style="@style/DialpadKeyButtonStyle"/>
    <Space
        android:layout_width="@dimen/in_call_card_dialpad_horizontal_spacing"
        android:layout_height="0dp"/>
    <com.android.car.dialer.DialpadButton
        android:id="@+id/pound"
        app:numberText="@string/pound"
        app:letterText="@string/pound_letters"
        style="@style/DialpadKeyButtonStyle"/>

</GridLayout>
